// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RowLabel /> renders RowLabel 1`] = `
<div
  className="bqOCwR"
>
  <div
    className="fBRjfV"
  >
    <div
      className="row__label row__label--mobile dzvWgK"
      data-index={0}
    >
      <div
        className="text text--dark text--primary foHwt gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ecTwCX"
      data-index={0}
    >
      <div
        className="text text--dark text--primary foHwt gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ecTwCX"
      data-index={0}
    >
      <div
        className="text text--dark text--primary foHwt gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`accent\` 1`] = `
<div
  className="bqOCwR"
>
  <div
    className="fBRjfV"
  >
    <div
      className="row__label row__label--mobile dzvWgK"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary eMgTID gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ecTwCX"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary eMgTID gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ecTwCX"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary eMgTID gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`alert\` 1`] = `
<div
  className="bqOCwR"
>
  <div
    className="fBRjfV"
  >
    <div
      className="row__label row__label--mobile dzvWgK"
      data-index={0}
    >
      <div
        className="badge flazKt"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ecTwCX"
      data-index={0}
    >
      <div
        className="badge flazKt"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ecTwCX"
      data-index={0}
    >
      <div
        className="badge flazKt"
        color="#d93a3a"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`caution\` 1`] = `
<div
  className="bqOCwR"
>
  <div
    className="fBRjfV"
  >
    <div
      className="row__label row__label--mobile dzvWgK"
      data-index={0}
    >
      <div
        className="badge gBousO"
        color="#c69a22"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ecTwCX"
      data-index={0}
    >
      <div
        className="badge gBousO"
        color="#c69a22"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ecTwCX"
      data-index={0}
    >
      <div
        className="badge gBousO"
        color="#c69a22"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`neutral\` 1`] = `
<div
  className="bqOCwR"
>
  <div
    className="fBRjfV"
  >
    <div
      className="row__label row__label--mobile dzvWgK"
      data-index={0}
    >
      <div
        className="badge bIAjWp"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ecTwCX"
      data-index={0}
    >
      <div
        className="badge bIAjWp"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ecTwCX"
      data-index={0}
    >
      <div
        className="badge bIAjWp"
        color="rgba(38, 38, 38, 0.6)"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders RowLabel variant \`positive\` 1`] = `
<div
  className="bqOCwR"
>
  <div
    className="fBRjfV"
  >
    <div
      className="row__label row__label--mobile dzvWgK"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary PGWQX gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--active ecTwCX"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary PGWQX gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--hidden ecTwCX"
      data-index={0}
    >
      <div
        className="text text--accent text-- text--primary PGWQX gmxDtj"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;

exports[`<RowLabel /> renders opened RowLabel 1`] = `
<div
  className="bqOCwR"
>
  <div
    className="fBRjfV"
  >
    <div
      className="row__label row__label--mobile dzvWgK"
      data-index={0}
    >
      <div
        className="text text--dark text--primary foHwt gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--desktop row__label--hidden ecTwCX"
      data-index={0}
    >
      <div
        className="text text--dark text--primary foHwt gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
    <div
      className="row__label row__label--expanded row__label--desktop row__label--active ecTwCX"
      data-index={0}
    >
      <div
        className="text text--dark text--primary foHwt gwaFLV"
        disabled={false}
        size="hecto"
      >
        test label
      </div>
    </div>
  </div>
</div>
`;
